Finished first pass to shorten the document.

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1238,3 +1238,33 @@
 	year={2018},
 	publisher={Springer}
 }
+
+
+
+@misc{dao,
+	Author = {CoinDesk},
+	Lastchecked = {04/02/2018},
+	Title = {Understanding the DAO Hack},
+	Url = {https://www.coindesk.com/understanding-dao-hack-journalists/}
+}
+
+@article{ruoti2019usability,
+	author = {Ruoti, Scott and Andersen, Jeff and Dickinson, Luke and Heidbrink, Scott and Monson, Tyler and O'neill, Mark and Reese, Ken and Spendlove, Brad and Vaziripour, Elham and Wu, Justin and Zappala, Daniel and Seamons, Kent},
+	title = {A Usability Study of Four Secure Email Tools Using Paired Participants},
+	journal = {ACM Trans. Priv. Secur.},
+	issue_date = {April 2019},
+	volume = {22},
+	number = {2},
+	month = apr,
+	year = {2019},
+	issn = {2471-2566},
+	pages = {13:1--13:33},
+	articleno = {13},
+	numpages = {33},
+	url = {http://doi.acm.org/10.1145/3313761},
+	doi = {10.1145/3313761},
+	acmid = {3313761},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {Grassroots adoption, PGP, paired participants, secure email},
+} 
