--- a/paper/main.tex
+++ b/paper/main.tex
@@ -15,7 +15,7 @@
 \IEEEoverridecommandlockouts
 
 \begin{document}
-\title{SoK: Blockchain Technology and Its Potential Use Cases}
+\title{Blockchain Technology and Its Potential Use Cases}
 %TODO: This needs to be anonymized when submitted.
 
 \makeatletter
