--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -66,57 +66,85 @@
 \label{sec:challenges}
 
 Our analysis of the literature revealed several challenges that need to be considered when developing systems using Blockchain technology.
-In this section, we describe these challenges and limitations.
+%In this section, we describe these challenges and limitations.
 %In Appendix~\ref{sec:academic}, we survey academic research that is attempting to address some of the challenges.
-\todo{Reference to full paper.}
-Note that this section is focused on challenges facing Blockchain systems generally, not challenges facing specific applications such as Bitcoin or Ethereum).
+%Note that this section is focused on challenges facing Blockchain systems generally, not challenges facing specific applications such as Bitcoin or Ethereum).
+\snote{Add reference to technical report for academic survey?}
 
 \subsection{Scalability and Performance}
-Many documents in our corpus point out that Blockchain technology's decentralized governance and operation incur significant overhead. The largest overheads incurred by Blockchain technology are (1) the need to run a consensus protocol before state can be updated, (2) the need to store the full system provenance, and (3) the need for each miner to store the ledger in its entirety. Any attempt to remove this replication comes at the cost of resilience that Blockchain-based systems often rely upon.
-
+Blockchain technology's decentralized governance and operation incur significant overhead: (1) the need to run a consensus protocol before state can be updated, (2) the need to store the full system provenance, and (3) the need for each miner to store the ledger in its entirety. Any attempt to remove this replication comes at the cost of resilience that Blockchain-based systems often rely upon.
 Additionally, most of today's open governance Blockchain systems are based on proof-of-work which bring additional challenges.
-These proof-of-work schemes require users to acquire hardware and expend electricity to participate in consensus.
-The real-world cost of these schemes can be tremendous---for example, it was estimated that as of April 2018 the energy consumed by Bitcoin miners alone was equivalent to the power usage of almost 5.5 million US households~\cite{Digiconomist}.
+These proof-of-work schemes require users to acquire hardware and expend electricity to participate in consensus, the real world cost of which can be tremendous---for example, it was estimated that as of April 2018 the energy consumed by Bitcoin miners alone was equivalent to the power usage of almost 5.5 million US households~\cite{Digiconomist}.
 
-Another unintended consequence of proof-of-work is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members. This phenomenon has emerged in all large-scale proof-of-work Blockchain systems\footnote{Currently almost 70\% of Bitcoin blocks are mined by the five largest mining pools~\cite{BlockchainInfoPools}}, and it is a problem because it inhibits decentralization~\cite{arxiv:GBERS18}.
+%Another unintended consequence of proof-of-work is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their computing power and sharing the profits among pool members. This phenomenon has emerged in all large-scale proof-of-work Blockchain systems\footnote{Currently almost 70\% of Bitcoin blocks are mined by the five largest mining pools~\cite{BlockchainInfoPools}}, and it is a problem because it inhibits decentralization~\cite{arxiv:GBERS18}.
 %Of course, these pools are disincentivized to damage trust in the system (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and it may violate security notions that depend on decentralization.  
 
 %Additionally, many design choices limit the performance of Blockchain systems.  Small block sizes can lead to extremely high transaction fees when miners are unwilling to add transactions that result in having to create more blocks.  On the other hand, larger block sizes can impede  throughput due to the increased latency of finalizing a transaction. %In Bitcoin, one must wait for six additional blocks to be confirmed before a transaction is considered final, which may be prohibitively long for applications where transactions need to clear immediately.
 %The challenge of handling a huge number of transactions while achieving acceptable levels of throughput and latency remains a critical hurdle to the use of Blockchain solutions in performance-critical systems.
 
 \subsection{On-chain Correctness}
-All executable code is subject to bugs---developer errors that can be taken advantage of to hijack program logic. This problem manifests in smart contracts, and when those contracts control the transference of valuable assets, the impact of a bug can be devastating. The immutability of a Blockchain's ledger exacerbates this challenge by impeding rollback of state changes, even those that are clearly malicious. This is because, by definition, any transactions on a blockchain upon which consensus is reached are considered legal---including ones due to buggy code and exploitations of such. If the miners decide to rollback the ledger to erase a mistaken transaction than confidence in the Blockchain system may be lost. Alternatively, if miners can't agree what to do about errant transactions, it could lead to a hard-fork in the Blockchain system.
+All executable code is subject to bugs and smart contracts are no exception.
+The immutability of a Blockchain's ledger exacerbates this challenge by impeding rollback of state changes, even those that are clearly malicious.
+Failure to act can be costly (e.g., the DAO attack~\cite{dao}), but so too can reversing transactions.
+%This is because, by definition, any transactions on a blockchain upon which consensus is reached are considered legal---including ones due to buggy code and exploitations of such.
+If the miners decide to rollback the ledger to erase a mistaken transaction than confidence in the Blockchain system may be lost.
+Alternatively, if miners can't agree what to do about errant transactions, it could lead to a fork in the Blockchain system.
+Rollback systems themselves can also be vulnerable~\cite{arxiv:AviSafSha18}.
 
-Despite best efforts to eliminate mistakes in smart contract and transactions, a payment or asset transfer system must be able to reverse fraudulent or errant transactions. For example, if a user pays for a physical real-world good using a cryptocurrency but is then never given the purchased item. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully to avoid introducing new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoin refund mechanism~\cite{FC:MccShaHao16} necessitating further research to design secure refunds in Bitcoin~\cite{arxiv:AviSafSha18}.
+%Despite best efforts to eliminate mistakes in smart contract and transactions, a payment or asset transfer system must be able to reverse fraudulent or errant transactions. For example, if a user pays for a physical real-world good using a cryptocurrency but is then never given the purchased item. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully to avoid introducing new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoin refund mechanism~\cite{FC:MccShaHao16} necessitating further research to design secure refunds in Bitcoin~\cite{arxiv:AviSafSha18}.
 
 \subsection{Off-chain stapling}
-Another challenge for applications is ensuring consistency between on-chain state and the off-chain objects or state that it represents.  When Blockchain technology is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by a digital identifier, or \textit{token}. When dealing with digital assets, correspondence between the asset and its token can generally be maintained by code; for example, a smart contract can track transference of ownership for a digital media license. For physical assets, however, maintaining this consistency is a challenge. Real-world processes must be employed to ensure that whenever an asset's state or ownership is modified, the corresponding token is updated. These processes are an obvious point of failure as they rely on correct enforcement by trusted parties. For example, a malicious entity could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario). The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, causing the token to be attached to an invalid asset (e.g., fake goods in luxury markets).
+Another challenge for applications is ensuring consistency between on-chain state and the off-chain reality it represents.
+When Blockchain technology is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by a digital identifier, or \textit{token}.
+When dealing with digital assets, consistency can be maintained by code; for example, a smart contract can track transference of ownership for a digital media license.
+For physical assets, real-world processes must be employed to ensure consistency, an obvious point of failure as they rely on correct execution by trusted parties (something that Blockchain systems are often deployed to remove).
+%For example, a malicious entity could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario).
+The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, causing the token to be attached to an invalid asset (e.g., fake goods in luxury markets).
 
-A related issue arises when Blockchain processes and smart contracts need to use off-chain inputs. For example, gambling contracts may determine which address to pay winnings to based on the result of a request to an off-chain oracle (e.g., sports scores, stock prices, weather forecasts, or other global events). If contract logic branches based on that response, the contract is no longer verifiable because auditors cannot confirm that the response received from the oracle at audit time is the same response received when the contract was executed. There are legitimate reasons why an oracle response might change with time, so this is really an inherent limitation of Blockchain technology: smart contracts cannot ``see'' external events.  Thus, additional mechanisms are needed to verify that these inputs cannot be forged.
+Similar challenges arise when Blockchain systems must track real-world events and information (e.g., sports scores, web requests).
+While such information can be provided by \emph{off-chain oracles}, these are trusted entities that are difficult to audit.
+
+%A related issue arises when Blockchain processes and smart contracts need to use off-chain inputs. 
+%For example, gambling contracts may determine which address to pay winnings to based on the result of a request to an off-chain oracle (e.g., sports scores, stock prices, weather forecasts, or other global events).
+%If contract logic branches based on that response, the contract is no longer verifiable because auditors cannot confirm that the response received from the oracle at audit time is the same response received when the contract was executed. There are legitimate reasons why an oracle response might change with time, so this is really an inherent limitation of Blockchain technology: smart contracts cannot ``see'' external events.  Thus, additional mechanisms are needed to verify that these inputs cannot be forged.
 
 \subsection{Security}
-Due to its decentralized nature, Blockchain is potentially vulnerable to a number of security threats.  First, coordinated attacks by a majority (or often even a large minority) of the miners can reorder, remove, and change transactions from the ledger. Thus, it is critical that Blockchain applications provide the proper incentives to keep miners honest.  In particular, it is critical to design incentives such that the game theoretic behavior for selfish miners is to honestly maintain the state of the Blockchain system rather than to destroy it through forming such coalitions.
-
-Additionally, Blockchain technology is vulnerable to traditional network attacks such as denial of service or partitioning.  Such attacks can aim to lower the number of participating miners or to fracture the network of miners to prevent consensus, lower the bar for 51\% attacks, or create an inconsistent state.
+Due to its decentralized nature, Blockchain is potentially vulnerable to a number of security threats.
+Coordinated attacks by a majority (or often even a large minority) of the miners can reorder, remove, and change transactions from the ledger. 
+%Thus, it is critical that Blockchain applications provide the proper incentives to keep miners honest.
+% In particular, it is critical to design incentives such that the game theoretic behavior for selfish miners is to honestly maintain the state of the Blockchain system rather than to destroy it through forming such coalitions.
+Additionally, Blockchain technology is vulnerable to traditional network attacks such as denial of service or partitioning.
+Such attacks aim to lower the number of participating miners or to fracture the network of miners to prevent consensus, lower the bar for attacks, or create an inconsistent state.
 
 \subsection{Privacy and anonymity}
-Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.  In basic implementations, data on the ledger is public in order to enable verification by all miners.  But this means that any sensitive data is inherently non-private. If confidentiality is needed, it will be necessary to either host a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that will allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption). Still, the use of cryptography will limit the auditability and thus the ability to have meaningful shared governance.
+%Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.
+Data in a Blockchain ledger is public (at least to all miners) in order to enable verification, meaning that sensitive data is inherently non-private.
+Confidentiality can be provided by hosting a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption)~\cite{SP:KMSWP16}.
+Still, the use of cryptography limits auditability the ability to have meaningful shared governance.
 
-Additionally, extreme care must be taken when trying to build an anonymous Blockchain system.
-While many existing Blockchain systems provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with other data external to the Blockchain system can effectively deanonymize users~\cite{DBLP:journals/corr/abs-1708-04748}.
+Extreme care must be taken when trying to build an anonymous Blockchain system.
+While many existing Blockchain systems provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their real-world names, this does not provide true anonymity as attacks that correlate transactions by the same pseudonyms together with other data external to the Blockchain system can effectively deanonymize users~\cite{DBLP:journals/corr/abs-1708-04748}.
 
 \subsection{Usability} %User Experience}
 % Jeremy: I toned this waaaaaay down. Ethereum has excellent tools now: linters, debuggers, static analysis tools. Even the etheruem wallet can compile and do basic debugging of Solidity code. However, beyond Ethereum things get messy and so that is the new point. 
-For developers, development and analysis tools are critical to building secure applications in any domain. The availability of user-friendly developer tools varies significantly depending on the maturity of the target Blockchain platform. Some projects, like Ethereum have mature tools, while others have very little support. Many Blockchain platforms are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
-
-Another major challenge of some Blockchain systems is that the require users to store, manage, and secure cryptographic keys. However, this is known to be a significant impediment for most users ~\cite{uss:WhiTyg99}.  A survey by Eskandari et al.~\cite{EBSC15} outlines these challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But, as the authors state all of these solutions have their drawbacks.
+%For developers, development and analysis tools are critical to building secure applications in any domain.
+The availability of user-friendly developer tools varies significantly depending on the maturity of the target Blockchain platform. Some projects, like Ethereum have mature tools, while others have very little support. Many Blockchain platforms are currently geared towards expert users and lack the user experience-focused tools needed to allow for easier use by non-experts.
+Another major challenge of some Blockchain systems is that the require users to store, manage, and secure cryptographic keys; however, this is known to be a significant impediment for most users~\cite{ruoti2019usability}.
+% ~\cite{uss:WhiTyg99}.  A survey by Eskandari et al.~\cite{EBSC15} outlines these challenges as well as potential solutions for managing keys for Bitcoin.  They discuss solutions such as password-protected and password-derived keys as well as offline and air-gapped storage of the keys.  But, as the authors state all of these solutions have their drawbacks.
 
 %With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
 \subsection{Legality and Regulation}
-Our analysis revealed wide-spread concern with regulatory issues surrounding cryptocurrencies, Blockchain-based assets, and other Blockchain applications. It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations. Therefore, there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians. In most countries, each of these already broad categories are administered by different government branches. Countries like the United States and Canada may require licensing or registration and have taken enforcement action against non-compliant firms.
+Our analysis revealed wide-spread concern with regulatory issues surrounding cryptocurrencies, Blockchain-based assets, and other Blockchain applications.
+These concerns often arose when Blockchain systems touted benefits that arose not from the underlying technology, but rather because that technology is not yet well-regulated.
+For example, Blockchain-based money transfer services are generally orders of magnitude faster than similar bank-provided services, but this speed increase does not arise from the use of Blockchain (which generally has higher technical overhead) but because the Blockchain-based services were not complying with the time-consuming regulatory processes that the bank-provided services were (e.g., mandatory holding periods).
 
-An extreme case of regulation is prohibition of cryptocurrencies or Blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
+%It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations.
+%Therefore, there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. 
+%Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians.
+%In most countries, each of these already broad categories are administered by different government branches.
+%Countries like the United States and Canada may require licensing or registration and have taken enforcement action against non-compliant firms.
+%An extreme case of regulation is prohibition of cryptocurrencies or Blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
  
  
 %As applications of blockchain technology proliferate, they have drawn significant attention from the regulatory bodies around the world.  In the settings of cryptocurrencies, a number of concerns such as the prevalence of black-market transactions, tax evasion, money laundering, and terrorist financing have drawn calls to regulate how such cryptocurrencies can be used.  An excellent review article by Kiviat~\cite{Kiviat15} outlines some of the issues that arise in regulating blockchain transactions.  
