--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -7,8 +7,8 @@
 %However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
 %Two decades after eCash was first proposed,
-In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency.%~\cite{Nak08}.
-Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme to allow the general public to maintain the system.%~\cite{DN93,back1997partial} 
+In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}.
+Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme to allow the general public to maintain the system.%~s\cite{DN93,back1997partial} 
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} which led the cryptocurrency to become the first to achieve widespread popularity and usage.
 
@@ -56,7 +56,7 @@ we attempt to provide a holistic overview of Blockchain technology, set forth a 
 %Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
 
 %Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
-While some readers may find the results described in this article unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
+%While some readers may find the results described in this article unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large and provide a common reference point for discussion on Blockchain technology.
 %While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
 Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of.
 The results are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.
