--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,8 +1,23 @@
 % !TEX root = ../main.tex
 
+\snote{Add reference to technical report describing how Blockchain fits into the overall set of distributed systems?}
+
 \section{Conclusion}
-In this article we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
-We accomplish this goal by using grounded theory to analyze a large corpus of data produced by industry.
 Ultimately, Blockchain technology is neither a panacea nor worthless.
-Instead it is a useful tool in a system developer's toolkit that can be applied when its overhead (consensus and replicated full system provenance) is justified by the system's needs (shared governance and operation, verifiable state, and resilience to data loss).
+Instead it is a useful tool in a system developer's toolkit that can be applied when its overhead is justified by the system's needs.
 Even though Blockchain technology does not solve all the problems that its proponents claim it does, we believe that is a meaningful technology that will continue to be used in industry and is deserving of some attention by industry.
+
+Based on our results and experience we recommend the use of the following questions to determine if Blockchain technology would be a good fit for a specific project.%\footnote{In Appendix~\ref{sec:distributed-comparison} we discuss alternatives to Blockchain technology.}
+
+\begin{enumerate}
+	\item Does the system require shared governance?
+	\item Does the system require shared operation?
+\end{enumerate}
+
+If the answer to both questions is no, then Blockchain's consensus protocol is likely unnecessary overhead. If the answer to both questions is yes, then Blockchain technology is likely a good fit. This is due to the fact that meaningful shared governance \emph{and} operation requires miners to audit the operations of others and to be able to recover data that a malicious miner might try to delete (questions 3 and 4 below, respectively). If only shared governance or shared operation is needed, then the following two questions can be used to determine if the auditable ledger and replication, respectively, justifying the use of Blockchain technology if both are needed:
+
+\begin{enumerate}[start=3]
+	\item Is it necessary to audit the system's provenance?
+	\item Is it necessary to prevent malicious data deletion?
+\end{enumerate}
+
